Appears to be fully functional calculator. Fixed multiplying by parentheses, dividing by 0, and enabled both the backspace key and button. Will test for further bugs, needs to be cosmetically improved. Try to replace Back with a symbol, breaking up some larger functions into more readable smaller ones.

--- a/style.css
+++ b/style.css
@@ -39,7 +39,8 @@ html{
 }
 
 #output-history{
-  flex: 1 1 auto;
+  height: 385px;
+  flex: 0 0 auto;
   white-space: pre-wrap;
   overflow-wrap: break-word;
   display: flex;
